--- a/ClientDataWiz/ClientDataWiz.csproj
+++ b/ClientDataWiz/ClientDataWiz.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Models\ControlValidation.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="ViewModels\AddressViewModel.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -67,7 +68,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ViewModels\ControlViewModel.cs" />
+    <Compile Include="ViewModels\FirstNameViewModel.cs" />
+    <Compile Include="ViewModels\FirstPageViewModel.cs" />
+    <Compile Include="ViewModels\LastNameViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="ViewModels\PhoneViewModel.cs" />
+    <Compile Include="ViewModels\LastPageViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
